added dashingd3js to list of tutorials

--- a/style.css
+++ b/style.css
@@ -19,6 +19,10 @@ p {
   stroke-dasharray: 3;
 }
 
+.y axis {
+  stroke: black;
+}
+
 /* Applied to the tag with the id "some-id" */
 #some-id {
   font-style: italic;
